--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -4,17 +4,79 @@
     flex-direction: column;
     align-items: center;
     background-color: blue;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../images/up.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .login-form-div{
-    background-color: violet;
-    width: 80%;
+    /* background-color: violet; */
+    width: 60%;
     display: flex;
     justify-content: center;
+    margin: auto;
+    color: aqua;
+}
 
+.login-input{
+    height: 3vh;
+    width: 100%;
+    
+}
+.login-input:focus{
+    outline: none;
 }
 
 .login-form-child{
     display: flex;
     flex-direction: column;
+}
+
+.username-label{
+    margin: auto;
+    padding: 10px;
+    padding-top: 0;
+}
+
+.login-btn{
+    width: 103%;
+    background: linear-gradient(110deg, cadetblue,rgba(200, 252, 226, 0.971),cadetblue);
+    background-size: 400%;
+    border: none;
+    height: 4vh;
+    margin: 7px;
+    margin-left: 0;
+    border-radius: 3px;
+}
+
+.login-btn:hover{
+    animation: btn-animation 2s;
+    
+}
+@keyframes btn-animation {
+    0%{background-position: right;}
+
+    100%{background-position: left;}
+}
+
+.username-message{
+    font-size: 8px;
+    padding: 3px;
+}
+
+.login-msg{
+    font-size: 10px;
+    color: red;
+    margin: 0;
+}
+
+.see-icon{
+    position: absolute;
+    left:59%;
+    top: 49.5%;
+    cursor: pointer;
+    color: black;
 }
