--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -123,7 +123,100 @@ justify-content: space-around;
 
 
 .create-btn{
-    margin-right: 25px;
-    margin-top: -45px; 
-    
+    margin-right: 30px;
+    margin-top: -20px; 
+    width: 130px !important;
+    border-radius: 20px;
+    border: none;
+    background-color: rgb(82, 82, 255);
+    color: white;
+}
+
+/* OFFER Creaction popup Form Styles 🔻*/
+
+.offer-popUp1{
+    width: 35%;
+    background-color: aquamarine;
+    height: 70vh;
+}
+
+.form-main-div{
+    margin:0 40px;
+    padding: 25px 0;
+}
+.offer-popUp1 input{
+    height: 4vh;
+}
+
+.dropDown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropDown-content{  
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 80px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropDown-content span{
+    color: black;
+    padding: 12px 16px;
+    width: 68.7px;
+    text-decoration: none;
+    display: block;
+}
+.dropDown:hover .dropDown-content {
+    display: block;
+}
+
+.dropDown-content span:hover {background-color: #f1f1f1}
+
+.pro-btn{
+    width: 100px;
+    height: 5vh;
+}
+
+.form-title-div{
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Offer form Date section Styles */
+.desperator-div{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+}
+.desperator-div span{
+    margin: 0 15px;
+}
+.vertical-line{
+    width: 180px;
+    height: 1px;
+    background-color: black;
+    margin: 10px 0;
+}
+
+.date-div-child{
+    display: flex;
+    flex-direction: column;
+    margin-top: -20px;
+}
+
+::placeholder{
+    color: rgb(0, 73, 91);
+    font-size: normal;
+}
+
+.popUp-next-btn{
+    width: 200px;
+    margin: auto;
+    align-items: center;
+    height: 4.5vh;
+    border: none;
+    border-radius: 13px;
 }
