--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -29,10 +29,11 @@
 .offer-card{
     width: 100%;
     height: 30vh;
-    background-color: coral;
+    background-color: rgb(221, 221, 221);
     margin: auto;
     margin: 5px;
-    border-radius: 12px;
+    border-radius: 10px;
+    padding: 0 10px;
 }
 
 .card-title{
@@ -40,6 +41,8 @@
     justify-content: space-between;
     width: 90%;
     margin: auto;
+    margin-top: 10px;
+    margin-bottom: -13px;
 }
 
 .card-pro-btn{
@@ -53,4 +56,64 @@
 
 .card-pro-btn-off{
     background-color: rgb(164, 164, 164);
+}
+
+.detailes-preview{
+    width: 100%;
+    /* background-color: cornflowerblue; */
+    height: 22vh;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dtl-card{
+    width: 20%;
+    height: 14vh;
+    background-color: azure;
+    margin: 5px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.card-line{
+    width: 70%;
+    height: 0.5px;
+    background-color: black;
+    margin-bottom: -11px;
+}
+
+.dtl-span{
+    font-size: 8px;
+}
+
+.hours-dtl-div{
+    display: flex;
+    flex-direction: column;
+}
+
+.dtl-icon{
+    font-size: 20px;
+    padding: 5px;
+}
+
+.icon-span{
+    font-size: 10px;
+    font-weight: bold;
+}
+
+.icon-container{
+    margin-bottom: -8px;
+    text-align: center;
+    align-items: center;
+}
+
+.title-span{
+    font-size: 18px;
+    font-weight: bold;
 }
