--- a/src/styles/popupTwo.css
+++ b/src/styles/popupTwo.css
@@ -85,3 +85,14 @@
 .pTwo{
     padding-top:10px;
 }
+
+.issue-img1-div2{
+    background: #000;
+    width: 60px;
+    height: 60px;
+}
+
+.issue-image{
+    width: 60px;
+    height: 60px;
+}
