--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -398,9 +398,10 @@
     margin-top: -7px;
 }
 .profile-image{
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
     border-radius: 25px;
+    padding: 12px;
 }
 
 .invisible-div{
