--- a/src/styles/employeePro.css
+++ b/src/styles/employeePro.css
@@ -27,6 +27,8 @@
 .personal-info{
     display: flex;
     justify-content: center;
+    /* background: linear-gradient(to right, #c04848, #480048) !important; */
+    background: linear-gradient(to right, #0f2027, #203a43, #2c5364) !important;
     
 }
 
@@ -61,7 +63,7 @@
     flex-direction: column;
     align-items: center;
     color: #8cb5ea;
-    background-image: radial-gradient( circle farthest-corner at -8.9% 68.2%,  rgba(16,66,157,1) 0%, rgba(16,66,157,1) 15.9%, rgba(11,27,103,1) 15.9%, rgba(11,27,103,1) 24.4%,  rgba(0,152,155,1) 0.1%, rgba(0,94,120,1) 94.2% );
+    background-image: radial-gradient( circle farthest-corner at -24% 77.4%,  rgb(0, 187, 255) 0%, rgb(0, 187, 255) 15.9%, rgb(0, 187, 255) 15.9%, rgb(0, 187, 255) 24.4%,  rgba(0,152,155,1) 0.1%, rgba(0,94,120,1) 94.2% );
     /* border: 0.5px solid rgb(0, 251, 255); */
 }
 
@@ -107,6 +109,7 @@
     padding-right: 35px;
     padding-left: 35px;
     /* border: 0.5px solid rgb(0, 251, 255); */
+    border: 0.3px solid rgb(0, 187, 255) ;
     color: rgb(0, 251, 255);
     margin-bottom: 40px;
     margin-top: 110px;
@@ -115,7 +118,7 @@
 
 /* Employee offer section */
 .empe-offers{
-    background-image: radial-gradient( circle farthest-corner at -8.9% 68.2%,  rgba(0,152,155,1) 0%, rgba(0,152,155,1) 15.9%, rgba(0,94,120,1) 15.9%, rgba(0,94,120,1) 24.4%,rgba(16,66,157,1) 24.4%, rgba(16,66,157,1) 66%);
+    background-image: radial-gradient( circle farthest-corner at 90% 77.4%,  rgb(0, 187, 255) 0%, rgb(0, 187, 255) 15.9%, rgb(0, 187, 255) 15.9%, rgb(0, 187, 255) 24.4%,rgba(16,66,157,1) 24.4%, rgba(16,66,157,1) 66%);
 }
 
 .deal-icon{
@@ -123,17 +126,75 @@
 }
 
 .deal-icon{
-    /* border: 0.5px solid rgb(61, 61, 203); */
+    /* border: 0.5px solid rgb(61, 61, 203); */ 
     border: none;
 }
 
 /* employee information document */
 
 .information-documents{
-    background-image: radial-gradient(circle farthest-corner at 108% 24.2%,  rgba(19,30,37,1) 0%, rgba(19,30,37,1) 15.9%, rgba(255, 255, 255, 0.103) 15.9%, rgba(255, 255, 255, 0.103) 24.4%,  rgba(5,111,146,1) 24.4%, rgba(6,57,84,1) 66%);
+    background-image: radial-gradient(circle farthest-corner at 108% 99.4%,  rgba(19,30,37,1) 0%, rgba(19,30,37,1) 15.9%, rgba(255, 255, 255, 0.103) 15.9%, rgba(255, 255, 255, 0.103) 24.4%,  rgba(5,111,146,1) 24.4%, rgba(6,57,84,1) 66%);
 }
 
 /* employee rating section */
 .rating-comments{
-    background-image: radial-gradient( circle farthest-corner at -8.9% 68.2%,  rgba(5,111,146,1) 0%, rgba(5,111,146,1) 15.9%, rgba(6,57,84,1) 15.9%, rgba(6,57,84,1) 24.4%, rgba(19,30,37,1) 24.5%, rgba(19,30,37,1) 66% );
+    background-image: radial-gradient( circle farthest-corner at -8.9% 99.4%,  rgba(5,111,146,1) 0%, rgba(5,111,146,1) 15.9%, rgba(6,57,84,1) 15.9%, rgba(6,57,84,1) 24.4%, rgba(19,30,37,1) 24.5%, rgba(19,30,37,1) 66% );
+}
+
+/* glass div */
+.glass-div{
+    /* background-color: rgba(255, 255, 255, 0.103); */
+    background-color: rgb(0, 187, 255);
+    width: 15px;
+    height: 15px;
+
+    position: absolute;
+    left: 22.5%;
+    top: 61%;
+    /* border-radius: 25px !important; */
+    /* border-bottom-right-radius: 20px; */
+    /* border: 0.2px solid blue; */
+    /* box-shadow: 2px 2px 10px black; */
+}
+
+.glass-2{
+    position: absolute;
+    /* left: 7.7% !important; */
+    top: 69%;
+}
+
+.glass-3{
+    position: absolute;
+    /* left: 43.4% !important; */
+    top: 65%;
+    
+}
+
+.glass-4{
+    /* position: absolute;
+    left: 79.2% !important;
+    border-right: 0.3px solid red ;
+    border-left: 0.3px solid red ; */
+    position: absolute;
+    top: 81%;
+}
+
+.glass-5{
+    /* position: absolute;
+    left: 25.5%;
+    top: 19%;
+   width: 13vw;
+border: 0.3px solid rgb(0, 187, 255) ; */
+position: absolute;
+top: 77%;
+}
+
+.glass-6{
+    /* position: absolute;
+    top: 19%;
+    left: 61.3%;
+    border: 0.3px solid rgb(0, 187, 255) ;
+    border-left: 0.3px solid rgb(255, 128, 0) ; */
+    position: absolute;
+    top: 73%;
 }
