--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -1,8 +1,9 @@
 .feed-main-div{
     width: 100%;
     display: flex;
-    flex-direction: column;
-    height: fit-content;
+    justify-content: center;
+    /* align-items: center; */
+    height: 100vh;
     /* background-image:linear-gradient(-20deg, #00cdac 0%, #8ddad5 100%); */
     background-image: linear-gradient( 171.8deg,  rgba(5,111,146,1) 13.5%, rgba(6,57,84,1) 78.6% );
 }
@@ -11,7 +12,7 @@
 .offers-main-div{
     width: 70%;
     height: auto;
-    margin: auto;
+    /* margin: auto; */
     display: flex;
     justify-content: space-around;
 }
@@ -414,4 +415,32 @@
     position: fixed;
     width: 40%;
     top: 8%;
+}
+
+.apld-msg-div{
+    /* background-color: #000; */
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 60%;
+    text-align: center;
+    align-items: center;
+    /* background-color: rgb(55, 55, 55); */
+    height: 20vh;
+    margin: auto;
+
+}
+
+.apld-msg-div p{
+    color: rgb(81, 134, 107);
+    font-weight: lighter;
+    font-size: 18px;
+}
+
+.verified-icon{
+    width: 35px;
+    height: 35px;
+    background: linear-gradient(to right, #a8ff78, #78ffd6);;
+    border-radius: 17.5px;
+    border: 0.2px solid black;
 }
