--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,13 +1,7 @@
-body{
-    margin-bottom: -10px;
-}
 
 .pro-main-div{
     width: 100%;
     height: 100vh;
-    /* overflow-x: hidden; */
-    /* overflow-y: hidden !important; */
-    margin-bottom: -30px;
     padding: 0;
     /* background-color: blueviolet; */
     background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
@@ -122,7 +116,7 @@ body{
 
 .pro-section{
     /* background-color: blueviolet; */
-    height: 90vh;
+    height: 100vh;
 }
 
 .user-main-img{
@@ -136,6 +130,7 @@ body{
     margin: auto;
     width: 40%;
     text-align: center;
+    padding-top: 65px;
 }
 
 .user-content{
